--- a/package.json
+++ b/package.json
@@ -18,12 +18,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.2.0",
-    "@tiptap/extension-link": "^2.10.3",
-    "@tiptap/extension-placeholder": "^2.10.3",
-    "@tiptap/extension-underline": "^2.10.3",
-    "@tiptap/pm": "^2.10.3",
-    "@tiptap/react": "^2.10.3",
-    "@tiptap/starter-kit": "^2.10.3",
     "antd": "^5.22.3",
     "axios": "^1.7.8",
     "formik": "^2.4.6",
@@ -35,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
     "recoil": "^0.7.7",
