--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@iconify/api": "^3.1.1",
     "@mui/material": "^6.2.0",
     "antd": "^5.22.3",
     "axios": "^1.7.8",
     "formik": "^2.4.6",
+    "iconify-icon": "^2.3.0",
     "lodash": "^4.17.21",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
@@ -40,6 +42,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@iconify/react": "^5.2.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
